--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  parse_server_sdk: ^1.0.24
+  parse_server_sdk_flutter: ^3.0.0
   bloc_pattern: ^2.3.2
   flare_flutter: ^1.6.2
-  rxdart: ^0.22.6
+  rxdart: ^0.26.0
   url_launcher: ^5.2.5
-  shared_preferences: ^0.5.4+6
+  shared_preferences: ^2.0.5
   intl: ^0.16.0
   diacritic: ^0.1.1
   timeago: ^2.0.22
   share: ^0.6.3+1
-  cached_network_image: ^1.1.3
+  cached_network_image: ^3.0.0
   firebase_analytics: ^5.0.6
 
 
