--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,17 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "pwa-chrome",
+  {
+      "name": "Flutter",
+      "type": "dart",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}"
-    }
+      "program": "lib/main/main.dart"
+    },
+  {
+    "name": "Flutter: Run all Tests",
+    "type": "dart",
+    "request": "launch",
+    "program": "./test/"
+  }
   ]
 }
