--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,23 +37,10 @@ dependencies:
   firebase_analytics: ^5.0.6
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.7
 
 
 # For information on the generic Dart part of this file, see the
